# ckanext-acl

./: MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  test.ini
ckanext/acl/: .#interfaces.py  __init__.py  access_permission.py  cli.py  command.py  controller.py  interfaces.py  plugin.py  views.py
ckanext/acl/assets/: resource.config  webassets.yml
ckanext/acl/fanstatic/scripts/: permission-form.js
ckanext/acl/logic/: __init__.py  get.py  update.py
ckanext/acl/logic/auth/: __init__.py  update.py
ckanext/acl/migration/acl/: alembic.ini
ckanext/acl/migration/acl/versions/: 62270696e9e9_init_tables.py  e8719f1f4b58_rename_access_permissions.py
ckanext/acl/model/: __init__.py  acl.py
ckanext/acl/templates/admin/: manage_permissions.html
ckanext/acl/tests/: __init__.py  conftest.py  test_controller.py  test_logic.py  test_plugin.py
